tests/ui/feature-gates/issue-49983-see-issue-0.stderr
error[E0658]: use of unstable library feature `ptr_internals`: use `NonNull` instead and consider `PhantomData<T>` (if you also use `#[may_dangle]`), `Send`, and/or `Sync`
  --> $DIR/issue-49983-see-issue-0.rs:4:30
   |
LL | #[allow(unused_imports)] use core::ptr::Unique;
   |                              ^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(ptr_internals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
